zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/specify_enum_tag_type_that_is_too_small.zig
const Small = enum(u2) {
    one,
    two,
    three,
    four,
    five,
};

const SmallUnion = union(enum(u2)) {
    one = 1,
    two,
    three,
    four,
};

comptime {
    _ = Small.one;
}
comptime {
    _ = SmallUnion.one;
}

// error
//
// :6:5: error: enum tag value '4' too large for type 'u2'
// :13:5: error: enum tag value '4' too large for type 'u2'
